--- a/GameLauncher/App.xaml
+++ b/GameLauncher/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="GameLauncher.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GameLauncher"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:GameLauncher">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,6 +13,7 @@
                 <ResourceDictionary Source="/Styles/ButtonStyles.xaml" />
                 <ResourceDictionary Source="/Styles/ComboBoxStyle.xaml"/>
                 <ResourceDictionary Source="/Styles/IconsStyle.xaml"/>
+                <ResourceDictionary Source="/Styles/LoginRegisterWindowStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
